# Strand-AR-Registrierung-KoordSysteme-Studien

./: README.md
ARCore/AR-App/: AR-App.sln  Assembly-CSharp.csproj
ARCore/AR-App/Assets/: BlueMaterial.mat
ARCore/AR-App/Assets/Prefabs/: AR Default Plane.prefab  AR Session.prefab  BlueCube.prefab  RedCube.prefab
ARCore/AR-App/Assets/Scenes/: SampleScene.unity
ARCore/AR-App/Assets/Scripts/: ARObjectManager.cs  ConnectionManager.cs
ARCore/AR-App/ProjectSettings/: ProjectSettings.asset
HoloLens/HoloLens2Project/Assets/Misc/: BlueCubeColor.mat  CubePrefab.prefab  CubeRecievedPrefab.prefab  RedCubeColor.mat
HoloLens/HoloLens2Project/Assets/MixedRealityToolkit.Generated/CustomProfiles/: GettingStarted_HoloLens2ConfigurationProfile.asset  GettingStarted_MixedRealitySpatialAwarenessMeshObserverProfile.asset  GettingStarted_MixedRealitySpatialAwarenessSystemProfile.asset  New MixedRealitySpatialAwarenessSystemProfile.asset  (+1 more)
HoloLens/HoloLens2Project/Assets/Scenes/: SampleScene.unity  Scene6.unity  Scene6Backup.unity  Scene6WorkingBackup.unity  Scene6_20.02-V1.unity  Scene6_22.02-V2.unity  Scene6_22.02-V3.unity  Scene6_23.02-V4.unity  Scene_V7.unity
HoloLens/HoloLens2Project/Assets/Scripts/: ConnectionManager.cs  ObjectManager.cs
HoloLens/HoloLens2Project/Builds/: ObjectsAndPositions.sln  UnityCommon.props
HoloLens/HoloLens2Project/Builds/Il2CppOutputProject/: Il2CppOutputProject.vcxproj  Il2CppOutputProject.vcxproj.filters
HoloLens/HoloLens2Project/Builds/ObjectsAndPositions/: App.cpp  App.h  Main.cpp  ObjectsAndPositions.vcxproj  ObjectsAndPositions.vcxproj.filters  Package.appxmanifest  Unity Data.vcxitems  Unity Data.vcxitems.filters  WSATestCertificate.pfx
HoloLens/HoloLens2Project/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Ressourcen/: CS-Model.blend  CS-Model.fbx
Robot/Config/: intera.sh  simlaunch.sh
Robot/ros_ws/: moveitstart.sh  simstart.sh
Robot/ros_ws/src/studienarbeit/: CMakeLists.txt  package.xml
Robot/ros_ws/src/studienarbeit/scripts/: robot_main.py
Server/: server.py
(+321 files in other folders)
