<?xml version="1.0"?>
<package format="2">
  <name>studienarbeit</name>
  <version>0.0.0</version>
  <description>Package fuer die Studienarbeit</description>

  <maintainer email="sebastian.bergner41@gmail.com">Sebastian Bergner</maintainer>

  <author email="sebastian.bergner41@gmail.com">Sebastian Bergner</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>intera_motion_msgs</build_depend>
  <build_depend>intera_interface</build_depend>
 
  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>intera_core_msgs</exec_depend>
  <exec_depend>intera_motion_msgs</exec_depend>
  <exec_depend>intera_interface</exec_depend>
  <exec_depend>joystick_drivers</exec_depend>


  <export>

  </export>
</package>
